--- a/bluefish/po/pt.po
+++ b/bluefish/po/pt.po
@@ -1,19 +1,20 @@
+# translation of pt.po to 
 # translation of bluefish to Portuguese
-# Copyright (C) 2000,2003 Free Software Foundation, Inc.
+# Copyright (C) 2000,2003, 2004 Free Software Foundation, Inc.
 # Lopo Pizarro <lopo-pizarro@netcabo.pt>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 16-03-2004_pt\n"
+"Project-Id-Version: pt\n"
 "POT-Creation-Date: 2004-08-13 09:44+0200\n"
-"PO-Revision-Date: 2004-03-29 18:17+0100\n"
+"PO-Revision-Date: 2004-09-16 21:41+0100\n"
 "Last-Translator: Lopo Pizarro <lopo-pizarro@netcabo.pt>\n"
-"Language-Team: Portuguese <translation-team-pt@lists.sourceforge.net>\n"
+"Language-Team:  <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: ../src/about.c:123
 msgid ""
@@ -37,7 +38,6 @@ msgstr ""
 "Esta versão do Bluefish foi compilada com as seguintes opções:\n"
 
 #: ../src/about.c:124
-#, fuzzy
 msgid ""
 "Project leader:\n"
 "  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
@@ -114,7 +114,6 @@ msgstr ""
 "este programa.\n"
 
 #: ../src/about.c:160
-#, fuzzy
 msgid ""
 "Current translators:\n"
 "\n"
@@ -190,8 +189,8 @@ msgstr ""
 "  Finlandês - Juho Roukala\n"
 "   <j.mr@luukku.com>\n"
 "\n"
-"  Francês - Roméo Viu-Berges\n"
-"   <apostledemencia@free.fr>\n"
+"  Francês - Michèle Garoche\n"
+"   <michele.garoche@easyconnect.fr>\n"
 "\n"
 "  Húngaro - Péter Sáska\n"
 "   <sasek@ccsystem.hu>\n"
@@ -247,12 +246,9 @@ msgid "Authentication required"
 msgstr "Autenticação requerida"
 
 #: ../src/authen.c:85
-#, fuzzy, c-format
+#, c-format
 msgid "Authentication is required for %s."
-msgstr ""
-"Autenticação requerida para %s\n"
-"\n"
-"Realm é %s"
+msgstr "Autenticação requerida para %s."
 
 #: ../src/authen.c:91
 msgid "Username:"
@@ -494,9 +490,8 @@ msgstr "Apagar"
 
 # src/stringlist.c:262
 #: ../src/bookmark.c:494
-#, fuzzy
 msgid "Delete all"
-msgstr " Apagar "
+msgstr "Apagar tudo"
 
 #: ../src/bookmark.c:917 ../src/bookmark.c:952 ../src/bookmark.c:974
 #: ../src/document.c:1988
@@ -522,9 +517,8 @@ msgid "temp"
 msgstr "temp"
 
 #: ../src/bookmark.c:1003
-#, fuzzy
 msgid "Delete all bookmarks."
-msgstr "Apagar marcador permanente "
+msgstr "Apagar todos os marcadores"
 
 #: ../src/bookmark.c:1003
 msgid "Are you sure?"
@@ -631,8 +625,7 @@ msgstr "A abrir o ficheiro "
 
 #: ../src/document.c:1578
 msgid "Cannot display file, unknown characters found."
-msgstr ""
-"Não foi possível mostrar o ficheiro, caracteres desconhecidos encontrados."
+msgstr "Não foi possível mostrar o ficheiro, caracteres desconhecidos encontrados."
 
 # src/snr2.c:651 src/snr2.c:688
 #: ../src/document.c:1976 ../src/snr2.c:1288
@@ -806,13 +799,12 @@ msgstr "Erro ao gravar ficheiro"
 #: ../src/document.c:2616
 #, c-format
 msgid "Save changes to \"%s\" before closing?."
-msgstr ""
+msgstr "Gravar alterações para \"%s\" antes de fechar?."
 
 # src/document.c:1465
 #: ../src/document.c:2619
-#, fuzzy
 msgid "Save changes to this untitled file before closing?"
-msgstr "Deseja gravar as mudanças feitas neste ficheiro Sem título?"
+msgstr "Deseja gravar as alterações feitas neste ficheiro Sem Título, antes de fechar?"
 
 #: ../src/document.c:2623
 msgid "Do_n't save"
@@ -820,7 +812,7 @@ msgstr "Não gravar"
 
 #: ../src/document.c:2625 ../src/document.c:3710
 msgid "If you don't save your changes they will be lost."
-msgstr ""
+msgstr "Se não gravar as alterações, estas perder-se-ão."
 
 # src/document.c:1347 src/document.c:1547
 #: ../src/document.c:2895
@@ -939,9 +931,8 @@ msgid "Open URL"
 msgstr "Abrir URL"
 
 #: ../src/document.c:3502
-#, fuzzy
 msgid "<b>Open URL</b>"
-msgstr "Abrir URL"
+msgstr "<b>Abrir URL</b>"
 
 # src/bluefish.c:617
 #: ../src/document.c:3548 ../src/gtk_easy.c:1595
@@ -1020,16 +1011,13 @@ msgstr "Não foi possível mudar o nome\n"
 
 # src/interface.c:705
 #: ../src/filebrowser.c:1247
-#, fuzzy, c-format
+#, c-format
 msgid "Are you sure you want to delete \"%s\" ?"
-msgstr ""
-"Tem certeza que deseja\n"
-"apagar \"%s\" ?"
+msgstr "Tem certeza que deseja apagar \"%s\" ?"
 
 #: ../src/filebrowser.c:1248
-#, fuzzy
 msgid "If you delete this file, it will be permanently lost."
-msgstr "O ficheiro será permanentemente apagado."
+msgstr "Se apagar este ficheiro, este será permanentemente eliminado."
 
 # src/document.c:1004
 #: ../src/filebrowser.c:1257 ../src/filebrowser.c:1261
@@ -1183,12 +1171,10 @@ msgstr "%d de %d"
 
 # src/bluefish.c:617
 #: ../src/gtk_easy.c:1241
-#, fuzzy
 msgid "Select File"
 msgstr "Selecionar ficheiro"
 
 #: ../src/gtk_easy.c:1370
-#, fuzzy
 msgid "Show hidden"
 msgstr "Mostrar ficheiros ocultos"
 
@@ -1213,9 +1199,8 @@ msgstr "Marcadores"
 
 # src/menu.c:462
 #: ../src/gui.c:252 ../src/menu.c:903
-#, fuzzy
 msgid "/View/View Sidebar"
-msgstr "/Exibir/Exibir Barra de Ferramentas Principal"
+msgstr "/Ver/Ver Barra de Ferramentas Principal"
 
 # src/toolbars.c:159
 #: ../src/gui.c:582
@@ -1826,17 +1811,17 @@ msgstr "a iniciar o bluefish"
 # src/menu.c:463
 #: ../src/gui.c:1487 ../src/menu.c:901
 msgid "/View/View HTML Toolbar"
-msgstr "/Exibir/Exibir Barra de Ferramentas HTML"
+msgstr "/Ver/Ver Barra de Ferramentas HTML"
 
 # src/menu.c:462
 #: ../src/gui.c:1494 ../src/menu.c:900
 msgid "/View/View Main Toolbar"
-msgstr "/Exibir/Exibir Barra de Ferramentas Principal"
+msgstr "/Ver/Ver Barra de Ferramentas Principal"
 
 # src/menu.c:464
 #: ../src/gui.c:1501 ../src/menu.c:902
 msgid "/View/View Custom Menu"
-msgstr "/Exibir/Exibir Barra de Ferramentas Personalizada"
+msgstr "/Ver/Ver Barra de Ferramentas Personalizada"
 
 # src/toolbars.c:519
 #: ../src/html.c:356
@@ -2694,9 +2679,8 @@ msgstr "/Ficheiro/Abrir..."
 
 # src/menu.c:74
 #: ../src/menu.c:312
-#, fuzzy
 msgid "/File/Open _recent"
-msgstr "/Ficheiro/Abrir recente"
+msgstr "/Ficheiro/Abrir _recente"
 
 # src/menu.c:74
 #: ../src/menu.c:313
@@ -2740,9 +2724,8 @@ msgstr "/Ficheiro/Grav_ar Todos"
 
 # src/menu.c:79
 #: ../src/menu.c:327
-#, fuzzy
 msgid "/File/Rever_t to Saved"
-msgstr "/Ficheiro/_Reverter para gravado"
+msgstr "/Ficheiro/Rever_ter para gravado"
 
 # src/menu.c:76
 #: ../src/menu.c:328
@@ -2910,13 +2893,11 @@ msgid "/Edit/sep4"
 msgstr "/Editar/sep4"
 
 #: ../src/menu.c:363
-#, fuzzy
 msgid "/Edit/S_hift Right"
 msgstr "/Editar/Deslocar à direita"
 
 # src/menu.c:92
 #: ../src/menu.c:364
-#, fuzzy
 msgid "/Edit/Shift _Left"
 msgstr "/Editar/Deslocar à esquerda"
 
@@ -2936,9 +2917,8 @@ msgstr "/Editar/sep6"
 
 # src/menu.c:473
 #: ../src/menu.c:368
-#, fuzzy
 msgid "/Edit/Save Sett_ings"
-msgstr "/Editar/_Gravar Configurações"
+msgstr "/Editar/Gravar Conf_igurações"
 
 # src/menu.c:473
 #: ../src/menu.c:369
@@ -2947,40 +2927,38 @@ msgstr "/Editar/Gravar Teclas de Atalho"
 
 # src/toolbars.c:523
 #: ../src/menu.c:370
-#, fuzzy
 msgid "/Edit/Preference_s"
-msgstr "/Editar/_Preferências"
+msgstr "/Editar/Preferência_s"
 
 # src/menu.c:69
 #: ../src/menu.c:371
 msgid "/_View"
-msgstr "/Exibir"
+msgstr "/_Ver"
 
 # src/menu.c:70
 #: ../src/menu.c:372
 msgid "/View/tearoff1"
-msgstr "/Exibir/tearoff1"
+msgstr "/Ver/tearoff1"
 
 # src/menu.c:462
 #: ../src/menu.c:373
 msgid "/View/View _Main Toolbar"
-msgstr "/Exibir/Exibir Barra de Ferramentas Principal"
+msgstr "/Ver/Ver Barra de Ferramentas Principal"
 
 # src/menu.c:463
 #: ../src/menu.c:374
 msgid "/View/View _HTML Toolbar"
-msgstr "/Exibir/Exibir Barra de Ferramentas HTML"
+msgstr "/Ver/Ver Barra de Ferramentas HTML"
 
 # src/menu.c:464
 #: ../src/menu.c:375
 msgid "/View/View _Custom Menu"
-msgstr "/Exibir/Exibir Barra de Ferramentas Personalizada"
+msgstr "/Ver/Ver Barra de Ferramentas Personalizada"
 
 # src/menu.c:462
 #: ../src/menu.c:376
-#, fuzzy
 msgid "/View/View _Sidebar"
-msgstr "/Exibir/Exibir Barra de Ferramentas Principal"
+msgstr "/Ver/Ver Barra de Ferramentas Principal"
 
 # src/menu.c:137
 #: ../src/menu.c:377
@@ -4318,9 +4296,8 @@ msgstr "/Projecto/Abrir Projecto..."
 
 # src/menu.c:74
 #: ../src/menu.c:679
-#, fuzzy
 msgid "/Project/Open _recent"
-msgstr "/Projecto/Abrir recente"
+msgstr "/Projecto/Abrir _recente"
 
 # src/menu.c:74
 #: ../src/menu.c:680
@@ -4611,9 +4588,8 @@ msgstr "Estes ficheiros não foram abertos:\n"
 
 # src/document.c:1166
 #: ../src/preferences.c:203
-#, fuzzy
 msgid "Untitled"
-msgstr "Sem título %d"
+msgstr "Sem título"
 
 # src/html_form.c:427
 #: ../src/preferences.c:303
@@ -4655,7 +4631,6 @@ msgstr "Modo de fechar etiquetas automático"
 
 # src/configure.c:433
 #: ../src/preferences.c:811
-#, fuzzy
 msgid "Inverse filter"
 msgstr "Filtro inverso"
 
@@ -4671,9 +4646,8 @@ msgstr "tipo de ficheiro"
 
 # src/html.c:648 src/html.c:1180 src/toolbars.c:359
 #: ../src/preferences.c:1168
-#, fuzzy
 msgid "Reset"
-msgstr "Frameset"
+msgstr "Limpar"
 
 # src/toolbars.c:109
 #: ../src/preferences.c:1174
@@ -4762,13 +4736,13 @@ msgid "Command"
 msgstr "Commando"
 
 #: ../src/preferences.c:1575
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s for current filename (any command)\n"
 "%i for input and %f for output filename (filters)"
 msgstr ""
-"%s = nomedoficheiro actual\n"
-"%f = nomedoficheiro de saída(para filtros)"
+"%s para nomedoficheiro actual (qq comando)\n"
+"%i para nome-de-fichero de entrada e %f para nome-de-ficheiro de saída (para filtros)"
 
 # src/html.c:893 src/html.c:1244 src/html.c:1358 src/html_form.c:156
 # src/html_form.c:175 src/html_form.c:208 src/html_form.c:252
@@ -5059,9 +5033,8 @@ msgstr "Restaurar últimas dimensões usadas"
 
 # src/configure.c:416
 #: ../src/preferences.c:2088
-#, fuzzy
 msgid "Initial sidebar width"
-msgstr "Largura inicial da janela"
+msgstr "Largura inicial da barra lateral"
 
 # src/configure.c:417
 #: ../src/preferences.c:2089
@@ -5084,9 +5057,8 @@ msgstr "Mostrar barra de ferramentas principal por defeito"
 
 # src/document.c:830
 #: ../src/preferences.c:2100
-#, fuzzy
 msgid "Show sidebar by default"
-msgstr "Mostrar barra de ferramentas principal por defeito"
+msgstr "Mostrar barra lateral por defeito"
 
 # src/document.c:830
 #: ../src/preferences.c:2101
@@ -5127,15 +5099,13 @@ msgstr "Posição da guia do documento"
 
 # src/configure.c:413
 #: ../src/preferences.c:2112
-#, fuzzy
 msgid "Sidebar notebook tab position"
-msgstr "Posição da guia do painel esquerdo"
+msgstr "Posição do separador do bloco de notas da barra lateral"
 
 # src/images.c:198
 #: ../src/preferences.c:2113
-#, fuzzy
 msgid "Sidebar location"
-msgstr "Localização da imagem:"
+msgstr "Localização da barra lateral"
 
 # src/configure.c:427 src/interface.c:777 src/interface.c:934
 #: ../src/preferences.c:2116 ../src/rcfile.c:570
@@ -5416,20 +5386,17 @@ msgstr "Procura: não encontrada"
 
 # src/snr2.c:654 src/toolbars.c:111
 #: ../src/snr2.c:1317
-#, fuzzy
 msgid "_Search for: "
-msgstr "Procurar por: "
+msgstr "_Procurar por: "
 
 # src/snr2.c:695
 #: ../src/snr2.c:1330
-#, fuzzy
 msgid "_Replace with: "
-msgstr "Substituir por: "
+msgstr "Substitui_r por: "
 
 #: ../src/snr2.c:1340
 msgid "\\0 refers to the first subsearch_pattern, \\1 to the second etc."
-msgstr ""
-"\\0 faz referência ao primeiro padrão de subprocura, \\1 para o segundo etc."
+msgstr "\\0 faz referência ao primeiro padrão de subprocura, \\1 para o segundo etc."
 
 # src/snr2.c:679
 #: ../src/snr2.c:1355
@@ -5495,19 +5462,17 @@ msgid "Replace type:"
 msgstr "Substituir tipo:"
 
 #: ../src/snr2.c:1397
-#, fuzzy
 msgid "_Patterns contain backslash escape sequences (\\n, \\t)"
-msgstr "Padrões contém sequência de escape barra-invertida (\\n, \\t)"
+msgstr "_Padrões contém sequências de escape - barra-invertida (\\n, \\t)"
 
 #: ../src/snr2.c:1398
-#, fuzzy
 msgid "_Match case"
-msgstr "Coincidir Maiúsculas e Minúsculas"
+msgstr "Coincidir _Maiúsculas e Minúsculas"
 
 # src/snr2.c:686
 #: ../src/snr2.c:1399
 msgid "O_verlap searches"
-msgstr "Sobrepor buscas"
+msgstr "So_brepor buscas"
 
 # src/snr2.c:712
 #: ../src/snr2.c:1401
@@ -5516,9 +5481,8 @@ msgstr "Perguntar antes de substituir"
 
 # src/snr2.c:713
 #: ../src/snr2.c:1402
-#, fuzzy
 msgid "Replace o_nce"
-msgstr "Substituir uma vez"
+msgstr "Substituir u_ma vez"
 
 # src/stringlist.c:258
 #: ../src/stringlist.c:366
@@ -5628,69 +5592,3 @@ msgstr "Código Fonte:"
 msgid "Size:"
 msgstr "Tamanho:"
 
-# src/menu.c:464
-#~ msgid "/View/View Left Panel"
-#~ msgstr "/Exibir/Exibir Painel Esquerdo"
-
-# src/menu.c:464
-#~ msgid "/View/View _Left Panel"
-#~ msgstr "/Exibir/Exibir Painel Esquerdo"
-
-# src/configure.c:416
-#~ msgid "Initial left panel width"
-#~ msgstr "Largura inicial do painel esquerdo"
-
-# src/document.c:830
-#~ msgid "Show left panel by default"
-#~ msgstr "Mostrar painel esquerdo por defeito"
-
-# src/menu.c:74
-#~ msgid "/File/Open recen_t"
-#~ msgstr "/Ficheiro/Abrir recen_te"
-
-# src/menu.c:74
-#~ msgid "/Project/Open r_ecent"
-#~ msgstr "/Projecto/Abrir r_ecente"
-
-#~ msgid ""
-#~ "Do you want to save the changes made to\n"
-#~ "\"%s\"?."
-#~ msgstr ""
-#~ "Quer gravar as mudanças feitas para\n"
-#~ "\"%s\"?."
-
-#~ msgid "This file has not been saved."
-#~ msgstr "Este ficheiro não foi gravado."
-
-#~ msgid "Your changes will be lost if you don't save them."
-#~ msgstr "As suas alterações serão perdidas se não gravar."
-
-# src/interface.c:736
-#~ msgid "Filetype"
-#~ msgstr "Tipo do ficheiro"
-
-# src/interface.c:758
-#~ msgid "Filefilter"
-#~ msgstr "Filtro de ficheiros"
-
-#~ msgid "Filetypes (colon separated)"
-#~ msgstr "Tipo de ficheiros (separado por dois pontos)"
-
-# src/configure.c:463
-#~ msgid "Browser"
-#~ msgstr "Navegador"
-
-# src/document.c:1347 src/document.c:1547
-#~ msgid "%s = current filename"
-#~ msgstr "%s = nomedoficheiro actual"
-
-# src/interface.c:743
-#~ msgid "File subpattern #"
-#~ msgstr "Ficheiro subpadrão #"
-
-# src/document.c:830
-#~ msgid "Line subpattern #"
-#~ msgstr "Subpadrão de linha #"
-
-#~ msgid "Output subpattern #"
-#~ msgstr "Subpadrão de saída #"
