--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 21-11-03_fr\n"
-"POT-Creation-Date: 2004-10-08 14:56+0200\n"
-"PO-Revision-Date: 2004-10-06 23:07+0200\n"
+"POT-Creation-Date: 2004-10-08 21:50+0200\n"
+"PO-Revision-Date: 2004-10-08 22:17+0200\n"
 "Last-Translator: Michèle Garoche <michele.garoche@easyconnect.fr>\n"
 "Language-Team: français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -343,7 +343,7 @@ msgid ""
 "Usage: %s [options] [filenames ...]\n"
 msgstr ""
 "\n"
-"Utilisation : %s [options] [nomdefichier]\n"
+"Utilisation : %s [options] [nomdefichier ...]\n"
 
 #: ../src/bluefish.c:97
 msgid ""
@@ -3246,19 +3246,19 @@ msgstr "/Balises/Formulaire/tearoff1"
 
 #: ../src/menu.c:567
 msgid "/Tags/Form/_Form"
-msgstr "/Balises/Formulaire/F_ormulaire..."
+msgstr "/Balises/Formulaire/F_ormulaire"
 
 #: ../src/menu.c:568
 msgid "/Tags/Form/_Button"
-msgstr "/Balises/Formulaire/_Bouton..."
+msgstr "/Balises/Formulaire/_Bouton"
 
 #: ../src/menu.c:569
 msgid "/Tags/Form/_Input"
-msgstr "/Balises/Formulaire/_Saisie..."
+msgstr "/Balises/Formulaire/_Saisie"
 
 #: ../src/menu.c:570
 msgid "/Tags/Form/_Textarea"
-msgstr "/Balises/Formulaire/_Zone de texte..."
+msgstr "/Balises/Formulaire/_Zone de texte"
 
 #: ../src/menu.c:572
 msgid "/Tags/_Misc"
