--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 21-11-03_fr\n"
-"POT-Creation-Date: 2004-10-20 21:10+0200\n"
+"POT-Creation-Date: 2004-10-22 18:18+0200\n"
 "PO-Revision-Date: 2004-10-20 21:56+0200\n"
 "Last-Translator: Michèle Garoche <michele.garoche@easyconnect.fr>\n"
 "Language-Team: français <fr@li.org>\n"
@@ -503,8 +503,9 @@ msgstr "Le nombre de caractères du fichier a changé\n"
 
 #: ../src/bookmark.c:1410
 msgid "Bookmarks positions could be incorrect. Delete bookmarks?"
-msgstr "La position des signets est peut-être incorrecte. "
-"Voulez-vous supprimer les signets ?"
+msgstr ""
+"La position des signets est peut-être incorrecte. Voulez-vous supprimer les "
+"signets ?"
 
 #: ../src/document.c:260
 msgid "/Document/Highlight Syntax"
@@ -4737,4 +4738,3 @@ msgstr "Source :"
 #: ../src/wizards.c:224
 msgid "Size:"
 msgstr "Taille :"
-
