--- a/bluefish/AUTHORS
+++ b/bluefish/AUTHORS
@@ -2,7 +2,7 @@ Project leader:
   Olivier Sessink <olivier@bluefish.openoffice.nl>
 
 Developers for this release:
-  Jim Hayward <jimhayward@linuxexperience.com>
+  Jim Hayward <jimhayward@linuxexperience.net>
   Oskar Świda <swida@aragorn.pb.bialystok.pl>
   Eugene Morenko(More) <more@irpin.com>
 
