Update my e-mail address to .net
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1444 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Project leader:
   Olivier Sessink <olivier@bluefish.openoffice.nl>
 
 Developers for this release:
-  Jim Hayward <jimhayward@linuxexperience.com>
+  Jim Hayward <jimhayward@linuxexperience.net>
   Oskar Świda <swida@aragorn.pb.bialystok.pl>
   Eugene Morenko(More) <more@irpin.com>
 
